--- a/cart.html
+++ b/cart.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <title>Cart Item</title>
+    <link rel="stylesheet" href="./Asset/CSS/cart.css">
 </head>
 <body>
-    
+    <script src="./Asset/JS/cart.js"></script>
 </body>
 </html>
