--- a/cart.html
+++ b/cart.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart Item</title>
-    <link rel="stylesheet" href="./Asset/CSS/cart.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./Asset/CSS/cart.css" />
+  </head>
+  <body>
+    <h1 class="title_the_page">YOUR CART</h1> 
+    <div class="clear_all_data_main">
+
+        <div class="clear_button">
+            <button id="clear_all_data" onclick="deletAllDataToLocalStorage()">
+                <div class="clear_icon">
+                    <img src="./Asset/ICON/eraser-solid.svg" alt="">
+                </div>
+                Clear All data to cart</button>
+        </div>
+
+    </div>
+    <div class="container">
+  
+      
+    </div>
     <script src="./Asset/JS/cart.js"></script>
-</body>
+  </body>
 </html>
