--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 />
               </div>
             </a>
-            <div class="counter">0</div>
+            <div id="counter"></div>
           </button>
         </div>
       </div>
