add to cart Projects

--- a/cart.html
+++ b/cart.html
@@ -9,6 +9,12 @@
   <body>
     <h1 class="title_the_page">YOUR CART</h1>
     <div class="clear_all_data_main">
+
+      <a href="./index.html" class="back_to_home">
+        <img src="./Asset/ICON/thumbs-up-solid.svg" alt="" height="25px" width="25px"/>  
+        continue shopping
+      </a>
+
       <div class="clear_button">
         <button id="clear_all_data" onclick="deletAllDataToLocalStorage()">
           <div class="clear_icon">
@@ -17,6 +23,7 @@
           Clear All data to cart
         </button>
       </div>
+
     </div>
 
 
