--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="add_to_cart_main">
           <button id="add_to_cart_button">
-            <a href="./cart.html" target="_blank">
+            <a href="./cart.html" >
               <div class="cart_icon">
                 <img
                   src="./Asset/ICON/cart.svg"
